feat: Added GeckoView as an implementation

--- a/settings.gradle
+++ b/settings.gradle
@@ -10,6 +10,10 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
+
+        maven {
+            url "https://maven.mozilla.org/maven2/"
+        }
     }
 }
 rootProject.name = "Archo Browser"
