--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
         minSdk 21
         targetSdk 32
         versionCode 1
-        versionName "1.0"
+        versionName "1.0.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -21,13 +21,18 @@ android {
     }
     buildTypes {
         release {
-            minifyEnabled false
+            ndk {
+                abiFilters "x86", "x86_64", "armeabi"
+            }
+
+            minifyEnabled true
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
     kotlinOptions {
         jvmTarget = '1.8'
@@ -40,6 +45,7 @@ dependencies {
     implementation 'androidx.fragment:fragment-ktx:1.5.0'
     implementation 'androidx.preference:preference:1.2.0'
     implementation 'com.google.android.material:material:1.6.1'
+    implementation 'org.mozilla.geckoview:geckoview:100.0.20220425210429'
 
     testImplementation 'junit:junit:4.13.2'
 
